chore: simplify styles with typography component

--- a/src/page/post/2022/07/python-physical-data-analysis/index.mdx
+++ b/src/page/post/2022/07/python-physical-data-analysis/index.mdx
@@ -1,3 +1,6 @@
+import { BlogPostParent } from "../../../../../partial";
+
+export const parent = BlogPostParent;
 export const metadata = {
   title: "Using Python for Physical Data Analysis",
   subtitle: `
