feat: finish blog post parent page

--- a/src/page/post/2022/07/python-physical-data-analysis/index.mdx
+++ b/src/page/post/2022/07/python-physical-data-analysis/index.mdx
@@ -7,7 +7,7 @@ export const metadata = {
     Exploring the most useful concepts, techniques and packages
     for analysing physical data with Python.
   `,
-  publishedAt: "July 18, 2022"
+  publishedOn: "July 18, 2022"
 }
 
 Hello, World!
