fix: some minor changes

--- a/src/page/post/2022/07/analyzing-physical-data-with-python/index.mdx
+++ b/src/page/post/2022/07/analyzing-physical-data-with-python/index.mdx
@@ -2,10 +2,10 @@ import { BlogPostParent } from "../../../../../partial";
 
 export const parent = BlogPostParent;
 export const metadata = {
-  title: "Using Python for Physical Data Analysis",
+  title: "Analyzing Physical Data with Python",
   subtitle: `
     Exploring the most useful concepts, techniques and packages
-    for analysing physical data with Python.
+    for physical data analysis with Python programming language.
   `,
   publishedOn: "July 18, 2022"
 }
