feat: client-side math using KaTeX

--- a/src/page/post/2022/07/analyzing-physical-data-with-python/index.mdx
+++ b/src/page/post/2022/07/analyzing-physical-data-with-python/index.mdx
@@ -8,6 +8,35 @@ export const metadata = {
     for physical data analysis with Python programming language.
   `,
   publishedOn: "July 18, 2022"
-}
+};
 
-Hello, World!
+One of the most time-consuming exercises I got to do throughout my
+undergraduate physics program was taking laboratory measurements of various
+physical phenomena and analyzing the measured datapoints to prove or
+disprove certain mathematical model describing the measured phenomenon. The
+university courses I undertook covered the required theory behind all carried
+experiments in great detail, and reproducing these experiments was not a
+problem. However, courses usually focus very little on the actual data
+analysis, and, as such, students tend to resort to using inefficient data
+processing methods or spend much more time researching and tinkering with
+various data analysis tools instead of focusing on the problem at hand.
+
+This blog post presents basic building blocks for writing your own data
+analysis pipelines in the Python programming language. It contains a colorful
+palette of ready-made code snippets with relevant examples of their physics
+application. We'll cover all the necessary steps of a typical analysis
+procedure, from loading your data into Python's virtual memory, through
+performing statistical regressions, to visualizing your results and outputting
+them into $\LaTeX$ documents.
+
+## Why Python?
+
+asdf
+
+## Installing Python
+
+asdf
+
+## Python environments
+
+asdf
