--- a/src/page/post/2022/07/analyzing-physical-data-with-python/index.mdx
+++ b/src/page/post/2022/07/analyzing-physical-data-with-python/index.mdx
@@ -49,9 +49,9 @@ curiosity's accords, and see how far you get.
 ## Why Python?
 
 The main difference between Python and other popular solutions for data
-analysis, like, let's say, [qtiplot][2], is that Python is a proper programming
-language. It is a program for making programs. As such, it is much more
-powerful in its capabilities but also has a much steeper learning curve.
+analysis, like, let's say, [QtiPlot][2], is that Python is a proper
+programming language. It is a program for making programs. As such, it is much
+more powerful in its capabilities but also has a much steeper learning curve.
 
 Although Python was originally not designed with scientific applications in
 mind, its user-friendly language design and high-level nature made it very
