chore: more microscopic graphic enhancements

--- a/src/page/post/2022/07/analyzing-physical-data-with-python/index.mdx
+++ b/src/page/post/2022/07/analyzing-physical-data-with-python/index.mdx
@@ -103,11 +103,14 @@ work properly if you use it.
 
 ## Packages for scientific computing
 
- - numpy and pandas
- - uncertainties, pint, pint-pandas
- - scipy
- - sympy
- - plotly and kaleido
+Following is a list of Python packages for scientific computation we'll be
+using throughout all the examples:
+
+ - NumPy and Pandas -
+ - Uncertainties, Pint, Pint-pandas -
+ - SciPy
+ - SymPy
+ - Plotly and Kaleido
 
 ## Loading data and performing basic math
 
